fgdiag (0.2.52) UNRELEASED; urgency=low

  * Set a failure reason when aborting due to timeout, to make the
    status more clear
  * Enable interrupt handler during initial SMART testing

 -- Ryan Niebur <ryan@debian.org>  Sun, 05 Aug 2012 19:46:39 -0700

fgdiag (0.2.51) freegeek-test; urgency=low

  * Add ability to update incorrect serial numbers and a
    DISKTEST_DATA_SECURITY_BATCH_MODE=true mode which is extra careful

 -- Ryan Niebur <ryan@debian.org>  Wed, 27 Jun 2012 15:35:39 -0700

fgdiag (0.2.50) freegeek-test; urgency=low

  * Add missing exit to disktest
  * Add optimization to write larger amounts of RANDOM at once
  * Fix RETRY check size comparison to correctly count writes
    that succeed (Closes: #28990)
  * Update my testing scripts for multiple drives
  * Fix and re-enable interrupt handler for multiple drives

 -- Ryan Niebur <ryan@debian.org>  Wed, 20 Jun 2012 08:51:24 -0700

fgdiag (0.2.49) freegeek-test; urgency=low

  * add a missing check_time during the second write pass
  * Improve output when drives fail or are cancelled
  * Handle interrupts by stopping the tests
  * Add a retry failure state if the drive did not wipe all of the
    blocks (Closes: #28900)
  * Improve logging of badblocks status during the first half
  * Log the log to the database

 -- Ryan Niebur <ryan@debian.org>  Thu, 14 Jun 2012 17:39:39 -0700

fgdiag (0.2.48) freegeek-test; urgency=low

  * Do a smart test before asking if the drives should be tested
    (Closes: #28135)

 -- Ryan Niebur <ryan@debian.org>  Thu, 17 May 2012 16:44:34 -0700

fgdiag (0.2.47) freegeek-test; urgency=low

  * also recognize unknown 76[0] from hdparm as SATA, as some possibly
    older manufacturers have used the bit immediately before the bits
    which properly detect the drive (Closes: #27756)

 -- Ryan Niebur <ryan@debian.org>  Thu, 10 May 2012 14:46:29 -0700

fgdiag (0.2.46) freegeek-test; urgency=low

  [ Ryan Niebur ]